--- a/TechTestCTM.Business.Test/TechTestCTM.Business.Test.csproj
+++ b/TechTestCTM.Business.Test/TechTestCTM.Business.Test.csproj
@@ -54,6 +54,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BookServiceTest.cs" />
     <Compile Include="WordCounterTest.cs" />
     <Compile Include="WordReaderTest.cs" />
   </ItemGroup>
